--- a/PizzaClient/nbproject/project.properties
+++ b/PizzaClient/nbproject/project.properties
@@ -29,7 +29,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.PizzaCommon.jar}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -58,6 +60,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.PizzaCommon=../PizzaCommon
+reference.PizzaCommon.jar=${project.PizzaCommon}/dist/PizzaCommon.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
