--- a/PizzaCommon/nbproject/project.properties
+++ b/PizzaCommon/nbproject/project.properties
@@ -30,11 +30,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.gson-2.4-javadoc.jar=C:\\Users\\Jacob\\Desktop\\gson-2.4-javadoc.jar
-file.reference.gson-2.4-javadoc.jar-1=C:\\Users\\Jacob\\Documents\\NetBeansProjects\\Libs\\gson-2.4-javadoc.jar
 file.reference.gson-2.4-sources.jar=C:\\Users\\Jacob\\Desktop\\gson-2.4-sources.jar
-file.reference.gson-2.4-sources.jar-1=C:\\Users\\Jacob\\Documents\\NetBeansProjects\\Libs\\gson-2.4-sources.jar
 file.reference.gson-2.4.jar=C:\\Users\\Jacob\\Desktop\\gson-2.4.jar
-file.reference.gson-2.4.jar-1=C:\\Users\\Jacob\\Documents\\NetBeansProjects\\Libs\\gson-2.4.jar
 file.reference.sqlite-jdbc-3.8.11.2.jar=C:\\Users\\Jacob\\Downloads\\sqlite-jdbc-3.8.11.2.jar
 file.reference.sqlite-jdbc-3.8.11.2.jar-1=C:\\Users\\Jacob\\Documents\\NetBeansProjects\\Libs\\sqlite-jdbc-3.8.11.2.jar
 includes=**
@@ -44,10 +41,9 @@ javac.classpath=\
     ${file.reference.gson-2.4-javadoc.jar}:\
     ${file.reference.gson-2.4-sources.jar}:\
     ${file.reference.gson-2.4.jar}:\
-    ${file.reference.gson-2.4-javadoc.jar-1}:\
-    ${file.reference.gson-2.4-sources.jar-1}:\
-    ${file.reference.gson-2.4.jar-1}:\
-    ${file.reference.sqlite-jdbc-3.8.11.2.jar-1}
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar-1}:\
+    ${libs.restapi.classpath}:\
+    ${libs.restlib.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
