--- a/PizzaCommon/nbproject/project.properties
+++ b/PizzaCommon/nbproject/project.properties
@@ -32,18 +32,14 @@ excludes=
 file.reference.gson-2.4-javadoc.jar=C:\\Users\\Jacob\\Desktop\\gson-2.4-javadoc.jar
 file.reference.gson-2.4-sources.jar=C:\\Users\\Jacob\\Desktop\\gson-2.4-sources.jar
 file.reference.gson-2.4.jar=C:\\Users\\Jacob\\Desktop\\gson-2.4.jar
-file.reference.sqlite-jdbc-3.8.11.2.jar=C:\\Users\\Jacob\\Downloads\\sqlite-jdbc-3.8.11.2.jar
-file.reference.sqlite-jdbc-3.8.11.2.jar-1=C:\\Users\\Jacob\\Documents\\NetBeansProjects\\Libs\\sqlite-jdbc-3.8.11.2.jar
+file.reference.sqlite-jdbc-3.8.11.2.jar=C:\\Users\\Jacob\\Documents\\NetBeansProjects\\Libs\\sqlite-jdbc-3.8.11.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.8.11.2.jar}:\
     ${file.reference.gson-2.4-javadoc.jar}:\
     ${file.reference.gson-2.4-sources.jar}:\
     ${file.reference.gson-2.4.jar}:\
-    ${file.reference.sqlite-jdbc-3.8.11.2.jar-1}:\
-    ${libs.restapi.classpath}:\
-    ${libs.restlib.classpath}
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
