--- a/PizzaWebService/nbproject/project.properties
+++ b/PizzaWebService/nbproject/project.properties
@@ -28,6 +28,10 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.gson-2.4-javadoc.jar=C:\\Users\\Jacob\\Documents\\NetBeansProjects\\Libs\\gson-2.4-javadoc.jar
+file.reference.gson-2.4-sources.jar=C:\\Users\\Jacob\\Documents\\NetBeansProjects\\Libs\\gson-2.4-sources.jar
+file.reference.gson-2.4.jar=C:\\Users\\Jacob\\Documents\\NetBeansProjects\\Libs\\gson-2.4.jar
+file.reference.sqlite-jdbc-3.8.11.2.jar=C:\\Users\\Jacob\\Documents\\NetBeansProjects\\Libs\\sqlite-jdbc-3.8.11.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -42,7 +46,11 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${reference.PizzaCommon.jar}
+    ${reference.PizzaCommon.jar}:\
+    ${file.reference.gson-2.4-javadoc.jar}:\
+    ${file.reference.gson-2.4-sources.jar}:\
+    ${file.reference.gson-2.4.jar}:\
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
