--- a/PizzaCommon/nbproject/project.properties
+++ b/PizzaCommon/nbproject/project.properties
@@ -39,7 +39,9 @@ javac.classpath=\
     ${file.reference.gson-2.4-javadoc.jar}:\
     ${file.reference.gson-2.4-sources.jar}:\
     ${file.reference.gson-2.4.jar}:\
-    ${file.reference.sqlite-jdbc-3.8.11.2.jar}
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar}:\
+    ${libs.restapi.classpath}:\
+    ${libs.restlib.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
