Pushing changes so that i can have them when i get to the school

--- a/PizzaClient/nbproject/project.properties
+++ b/PizzaClient/nbproject/project.properties
@@ -27,11 +27,19 @@ dist.dir=dist
 dist.jar=${dist.dir}/PizzaClient.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.gson-2.4-javadoc.jar=C:\\Users\\Jacob\\Documents\\NetBeansProjects\\Libs\\gson-2.4-javadoc.jar
+file.reference.gson-2.4-sources.jar=C:\\Users\\Jacob\\Documents\\NetBeansProjects\\Libs\\gson-2.4-sources.jar
+file.reference.gson-2.4.jar=C:\\Users\\Jacob\\Documents\\NetBeansProjects\\Libs\\gson-2.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.PizzaCommon.jar}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${libs.restapi.classpath}:\
+    ${libs.restlib.classpath}:\
+    ${file.reference.gson-2.4-javadoc.jar}:\
+    ${file.reference.gson-2.4-sources.jar}:\
+    ${file.reference.gson-2.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
