--- a/PizzaCommon/nbproject/project.properties
+++ b/PizzaCommon/nbproject/project.properties
@@ -29,19 +29,15 @@ dist.jar=${dist.dir}/PizzaCommon.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.gson-2.4-javadoc.jar=C:\\Users\\Jacob\\Desktop\\gson-2.4-javadoc.jar
-file.reference.gson-2.4-sources.jar=C:\\Users\\Jacob\\Desktop\\gson-2.4-sources.jar
-file.reference.gson-2.4.jar=C:\\Users\\Jacob\\Desktop\\gson-2.4.jar
+file.reference.gson-2.4.jar=C:\\Users\\Nick\\git\\CatsAndDinosaurs\\PizzaCommon\\Documentation\\Libs\\gson-2.4.jar
 file.reference.sqlite-jdbc-3.8.11.2.jar=C:\\Users\\Jacob\\Documents\\NetBeansProjects\\Libs\\sqlite-jdbc-3.8.11.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.gson-2.4-javadoc.jar}:\
-    ${file.reference.gson-2.4-sources.jar}:\
-    ${file.reference.gson-2.4.jar}:\
     ${file.reference.sqlite-jdbc-3.8.11.2.jar}:\
     ${libs.restapi.classpath}:\
-    ${libs.restlib.classpath}
+    ${libs.restlib.classpath}:\
+    ${file.reference.gson-2.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
