--- a/PizzaCommonTests/nbproject/project.properties
+++ b/PizzaCommonTests/nbproject/project.properties
@@ -41,7 +41,8 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${reference.PizzaCommon.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
