--- a/PizzaWebService/nbproject/project.properties
+++ b/PizzaWebService/nbproject/project.properties
@@ -28,10 +28,10 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.gson-2.4-javadoc.jar=C:\\Users\\Jacob\\Documents\\NetBeansProjects\\Libs\\gson-2.4-javadoc.jar
-file.reference.gson-2.4-sources.jar=C:\\Users\\Jacob\\Documents\\NetBeansProjects\\Libs\\gson-2.4-sources.jar
-file.reference.gson-2.4.jar=C:\\Users\\Jacob\\Documents\\NetBeansProjects\\Libs\\gson-2.4.jar
-file.reference.sqlite-jdbc-3.8.11.2.jar=C:\\Users\\Jacob\\Documents\\NetBeansProjects\\Libs\\sqlite-jdbc-3.8.11.2.jar
+file.reference.gson-2.4-javadoc.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\domains\\domain1\\lib\\gson-2.4-javadoc.jar
+file.reference.gson-2.4-sources.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\domains\\domain1\\lib\\gson-2.4-sources.jar
+file.reference.gson-2.4.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\domains\\domain1\\lib\\gson-2.4.jar
+file.reference.sqlite-jdbc-3.8.11.2.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\domains\\domain1\\lib\\sqlite-jdbc-3.8.11.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -47,9 +47,9 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${reference.PizzaCommon.jar}:\
+    ${file.reference.gson-2.4.jar}:\
     ${file.reference.gson-2.4-javadoc.jar}:\
     ${file.reference.gson-2.4-sources.jar}:\
-    ${file.reference.gson-2.4.jar}:\
     ${file.reference.sqlite-jdbc-3.8.11.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -77,7 +77,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 project.PizzaCommon=../PizzaCommon
