--- a/PizzaClient/nbproject/project.properties
+++ b/PizzaClient/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=PizzaClient
+application.vendor=Nigel
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,10 +27,12 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/PizzaClient.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.gson-2.4-javadoc.jar=C:\\Users\\Jacob\\Documents\\NetBeansProjects\\Libs\\gson-2.4-javadoc.jar
 file.reference.gson-2.4-sources.jar=C:\\Users\\Jacob\\Documents\\NetBeansProjects\\Libs\\gson-2.4-sources.jar
 file.reference.gson-2.4.jar=C:\\Users\\Jacob\\Documents\\NetBeansProjects\\Libs\\gson-2.4.jar
+file.reference.gson-2.4.jar-1=C:\\Program Files\\glassfish-4.1\\glassfish\\domains\\domain1\\lib\\gson-2.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -39,7 +42,7 @@ javac.classpath=\
     ${libs.restlib.classpath}:\
     ${file.reference.gson-2.4-javadoc.jar}:\
     ${file.reference.gson-2.4-sources.jar}:\
-    ${file.reference.gson-2.4.jar}
+    ${file.reference.gson-2.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
