--- a/PizzaWebService/nbproject/project.properties
+++ b/PizzaWebService/nbproject/project.properties
@@ -31,6 +31,7 @@ excludes=
 file.reference.gson-2.4-javadoc.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\domains\\domain1\\lib\\gson-2.4-javadoc.jar
 file.reference.gson-2.4-sources.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\domains\\domain1\\lib\\gson-2.4-sources.jar
 file.reference.gson-2.4.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\domains\\domain1\\lib\\gson-2.4.jar
+file.reference.gson-2.4.jar-1=C:\\Users\\Jacob\\Documents\\NetBeansProjects\\Libs\\gson-2.4.jar
 file.reference.sqlite-jdbc-3.8.11.2.jar=C:\\Program Files\\glassfish-4.1\\glassfish\\domains\\domain1\\lib\\sqlite-jdbc-3.8.11.2.jar
 includes=**
 j2ee.compile.on.save=true
@@ -50,7 +51,8 @@ javac.classpath=\
     ${file.reference.gson-2.4.jar}:\
     ${file.reference.gson-2.4-javadoc.jar}:\
     ${file.reference.gson-2.4-sources.jar}:\
-    ${file.reference.sqlite-jdbc-3.8.11.2.jar}
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar}:\
+    ${file.reference.gson-2.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
