--- a/PizzaClient/nbproject/project.properties
+++ b/PizzaClient/nbproject/project.properties
@@ -65,7 +65,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=views.MainWindow
+main.class=cs414.a5.nwalling.employeeclient.views.MainWindow
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
